--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                         <h1 class="display-4 title-color">FOREST <i class="fas fa-tree"></i></h1>
                         <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime, beatae autem, repellat sit quis quibusdam libero dignissimos rerum amet distinctio ullam dolorum eveniet optio doloribus temporibus cum explicabo? Sint, aut!</p>
                         <a href="#" class="btn btn-color slide-btn btn-lg">
-                            <i class="fas fa-phone-square-alt"></i> Explore
+                            <i class="fas fa-map-marker-alt"></i> Explore
                         </a>
                     </div>
                 </div>
@@ -309,27 +309,40 @@
 
 <div class="footer">
     <div class="footer-content">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row">
-                <div class="col-md-3 colo-12">
+                <div class="col-lg-2 colo-12 ">
                     <img src="Images/logo.png" alt="logo" class="footer-logo">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident obcaecati sunt corrupti.</p>
-                </div>
-                <div class="col-md-3">
+                </div> 
+                <div class="col-lg-2 v1">
                     <h4>PLACES</h4>
                     <p>Srinagar</p>
                     <p>Gulmarg</p>
                     <p>Vaisno Devi</p>
                     <p>Amarnath</p>
                 </div>
-                <div class="col-md-3 col-12">
+                <div class="col-lg-3 col-12 v1">
                     <h4>QUICK CONTACT</h4>
-                    <p><i class="fa fa-phone-square"></i> +1 0123456789</p>
-                    <p><i class="fa fa-enevelope"></i> heloo@demo.com</p>
-                    <p><i class="fa fa-home"></i> Dwarka, New Delhi</p>
+                    <p><i class="fa fa-phone-square-alt"></i> +110 23456789</p>
+                    <p><i class="fa fa-envelope"></i> jammukashmirtravel007@gmail.com</p>
+                    <p><i class="fa fa-home"></i>  xyz road Dwarka, New Delhi</p>
                     
                 </div>
-                <div class="col-md-3 col-12"></div>
+                <div class="col-lg-3 col-12 v1">
+                    <h4>Follow Us</h4>
+                    <p><i class="fa fa-facebook"></i> Facebook</p>
+                    <p><i class="fa fa-twitter"></i>  Twitter</p>
+                    <p><i class="fa fa-instagram"></i> Instagram</p>
+                    <p><i class="fa fa-youtube"></i>  Youtube</p>
+                </div>
+                <div class="col-lg-2 col-12 footer-links v1">
+                    <h4>IMPORTANT LINKS</h4>
+                    <a href="#"> Cultural Academy</a><br>
+                    <a href="#"> Museums</a><br>
+                    <a href="#"> Handicrafts</a><br>
+                    <a href="#"> Chamber of Commerce</a><br>
+                </div>
             </div>
         </div>
         
