--- a/index.html
+++ b/index.html
@@ -311,32 +311,32 @@
     <div class="footer-content">
         <div class="container-fluid">
             <div class="row">
-                <div class="col-lg-2 colo-12 ">
+                <div class="col-lg-2  col-md-2 colo-12 ">
                     <img src="Images/logo.png" alt="logo" class="footer-logo">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident obcaecati sunt corrupti.</p>
                 </div> 
-                <div class="col-lg-2 v1">
+                <div class="col-lg-2 col-md-2 col-12 v1">
                     <h4>PLACES</h4>
                     <p>Srinagar</p>
                     <p>Gulmarg</p>
                     <p>Vaisno Devi</p>
                     <p>Amarnath</p>
                 </div>
-                <div class="col-lg-3 col-12 v1">
+                <div class="col-lg-3 col-md-3 col-12 v1">
                     <h4>QUICK CONTACT</h4>
                     <p><i class="fa fa-phone-square-alt"></i> +110 23456789</p>
                     <p><i class="fa fa-envelope"></i> jammukashmirtravel007@gmail.com</p>
                     <p><i class="fa fa-home"></i>  xyz road Dwarka, New Delhi</p>
                     
                 </div>
-                <div class="col-lg-3 col-12 v1">
+                <div class="col-lg-3 col-md-3 col-12 v1">
                     <h4>Follow Us</h4>
                     <p><i class="fa fa-facebook"></i> Facebook</p>
                     <p><i class="fa fa-twitter"></i>  Twitter</p>
                     <p><i class="fa fa-instagram"></i> Instagram</p>
                     <p><i class="fa fa-youtube"></i>  Youtube</p>
                 </div>
-                <div class="col-lg-2 col-12 footer-links v1">
+                <div class="col-lg-2 col-md-2 col-12 footer-links v1">
                     <h4>IMPORTANT LINKS</h4>
                     <a href="#"> Cultural Academy</a><br>
                     <a href="#"> Museums</a><br>
@@ -349,7 +349,7 @@
     </div>
 
     <div class="footer-bottom">
-        &copy; J&K TOURISM | Designed by Shubham Kumar
+        &copy; J&K TOURISM | Designed by Shubham Kumar 
     </div>
 </div>
 
